added git ignore

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,7 +21,7 @@
 *.properties    text
 *.sass          text
 *.scss          text
-*.sh            text eol=lf
+*.sh            text
 *.sql           text
 *.txt           text
 *.ts            text
